# fibgit

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  build  fibgit_build  installer.txt  main.cpp
.travis/: build.sh  release.sh  test.sh
fibgit/: CMakeLists.txt
fibgit/include/: common.h
fibgit/program/: CMakeLists.txt
include/: add.h
src/: CMakeLists.txt  fibgit.cpp
src/test/: add.c
test/: index.js
